# setfit-example-classifier

./: .gitignore  LICENSE  README.md  Taskfile.yaml  main.py  pyproject.toml
data/: eval.csv  test.csv  train.csv
docs/: demo.cast
scripts/: predict.py  train.py
