[project]
name = "setfit-jobs"
version = "0.1.0"
description = "Classify vacancies as interesting or not using SetFit"
authors = [{ name = "Viacheslav Shvets", email = "slava@shvec.com" }]
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.6.0",
    "fire>=0.7.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "setfit>=1.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "pandas>=2.2.3",
]
